# OPK

./: .gitignore  testy_srandy
CV_1/Trieda v C++/: Storage  Storage.cpp  Storage.h  storage
CV_1/project/: hello_world  kompilacia.txt  main.cpp
CV_1/project/src/: hello.cpp
CV_2/: CMakeLists.txt  canvas.cpp  canvas.h  main.cpp  shapes.cpp  shapes.h
CV_3/cv3_verzia_cvicenie/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fifo_app
CV_3/cv3_verzia_cvicenie/src/fifo_lib/: Makefile  cmake_install.cmake
CV_3/cv3_verzia_cvicenie/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  fifo_tests  fifo_tests[1]_include.cmake  fifo_tests[1]_tests.cmake  tests.cpp
CV_4/: CMakeLists.txt  main.cpp
CV_4/include/: Canvas.h  Environment.h  Lidar.h  Robot.h
CV_4/src/: Canvas.cpp  Environment.cpp  Lidar.cpp  Robot.cpp  main.cpp
cv4_part1/: CMakeLists.txt  DOKUMENTACIA.md
cv4_part1/include/: Canvas.h  Environment.h  Lidar.h
cv4_part1/src/: Canvas.cpp  Environment.cpp  Lidar.cpp  Robot.cpp  main.cpp
cv4_part1/tests/: robot_test.cpp
w3school_c++/: Popis_suboru.txt  book  book.cpp  book.h  test_obj1  test_obj1.cpp  test_obj1.h
w3school_c++/Define a Method Inside the Class/: inside  inside_example.cpp  inside_example.h  outside  outside_example.cpp  outside_example.h
